// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`renderer health i18n localize (GH #6 Phase-2) > localizes the full prose by key for en + zh (golden) > darwin-en 1`] = `
[
  {
    "evidence": [
      "Claude Code settings",
    ],
    "fix": {
      "description": "Use this only for trusted local workflows.",
      "label": "Suggested fix",
    },
    "id": "claude-code:configuration:project-permission-bypass",
    "message": "permissionMode is set to bypassPermissions.",
    "suggestion": "Use this only for trusted local workflows.",
    "title": "Claude Code bypass permissions enabled",
  },
  {
    "evidence": [
      "Claude Code hooks",
    ],
    "fix": {
      "description": "Remove shell or move the full command into command when shell selection matters.",
      "label": "Suggested fix",
    },
    "id": "claude-code:configuration:user-hook-shell-ignored-with-args",
    "message": "A command hook defines args and shell; Claude Code ignores shell in this shape.",
    "suggestion": "Remove shell or move the full command into command when shell selection matters.",
    "title": "Claude hook shell is ignored when args are set",
  },
  {
    "evidence": [
      "Claude Code settings",
    ],
    "fix": {
      "description": "Prefer narrower command allow rules.",
      "label": "Suggested fix",
    },
    "id": "claude-code:configuration:user-permission-broad-bash",
    "message": "permissions.allow contains Bash(*).",
    "suggestion": "Prefer narrower command allow rules.",
    "title": "Broad Bash permission rule",
  },
  {
    "evidence": [
      "Claude Code settings",
    ],
    "fix": {
      "description": "Add the official Claude Code settings schema near the top of the JSON file.",
      "label": "Add Claude settings schema",
    },
    "id": "claude-code:configuration:user-settings-schema-missing",
    "message": "settings.json does not declare the Claude Code settings JSON schema.",
    "suggestion": "Add $schema if you want editor validation for Claude Code settings.",
    "title": "Claude settings schema is not declared",
  },
  {
    "evidence": [
      "Claude Code memory",
    ],
    "fix": {
      "description": "Add a Claude memory import for the shared project instructions.",
      "label": "Import AGENTS.md",
    },
    "id": "claude-code:reference:project-agents-md-not-imported",
    "message": "This project has AGENTS.md, but Claude Code reads CLAUDE.md and only imports files referenced from it.",
    "suggestion": "Add @AGENTS.md to project CLAUDE.md if those shared instructions should apply to Claude Code.",
    "title": "Project CLAUDE.md does not import AGENTS.md",
  },
  {
    "evidence": [
      "Claude Code memory",
    ],
    "fix": {
      "description": "Create the imported file or remove the @path reference.",
      "label": "Suggested fix",
    },
    "id": "claude-code:reference:user-agents-md-missing-import-1jcd9gj",
    "message": "missing-agents.md referenced by AGENTS.md does not exist.",
    "suggestion": "Create the imported file or remove the @path reference.",
    "title": "Instruction import is missing",
  },
  {
    "evidence": [
      "Claude Code sessions",
    ],
    "fix": {
      "description": "This is usually harmless. Remove stale directories if they are no longer useful.",
      "label": "Suggested fix",
    },
    "id": "claude-code:session:empty-project-dirs",
    "message": "1 empty project directories found in ~/.claude/projects/.",
    "suggestion": "This is usually harmless. Remove stale directories if they are no longer useful.",
    "title": "Empty Claude project directories",
  },
  {
    "evidence": [
      "Claude Code sessions",
    ],
    "fix": {
      "description": "This can happen with partial or legacy transcripts.",
      "label": "Suggested fix",
    },
    "id": "claude-code:session:metadata-missing-1agy2pa",
    "message": "orphan-session.jsonl is missing start time or project path metadata.",
    "suggestion": "This can happen with partial or legacy transcripts.",
    "title": "Session metadata is incomplete",
  },
  {
    "evidence": [
      "Claude Code settings",
    ],
    "fix": {
      "description": "Create ~/.claude/CLAUDE.md if you want shared Claude Code instructions.",
      "label": "Suggested fix",
    },
    "id": "claude-code:source:user-claude-md-missing",
    "message": "No user-level CLAUDE.md found.",
    "suggestion": "Create ~/.claude/CLAUDE.md if you want shared Claude Code instructions.",
    "title": "User CLAUDE.md not found",
  },
  {
    "evidence": [
      "Claude Code MCP",
    ],
    "fix": {
      "description": "Add the transport field required by the agent configuration.",
      "label": "Suggested fix",
    },
    "id": "claude-code:structure:project-mcp-empty-missing-transport",
    "message": "empty has no command, url, type, or transport field.",
    "suggestion": "Add the transport field required by the agent configuration.",
    "title": "MCP server has no transport",
  },
  {
    "evidence": [
      "Claude Code subagents",
    ],
    "fix": {
      "description": "Claude Code subagents require Markdown files with name and description frontmatter.",
      "label": "Suggested fix",
    },
    "id": "claude-code:structure:user-agent-broken",
    "message": "broken is missing name or description frontmatter.",
    "suggestion": "Claude Code subagents require Markdown files with name and description frontmatter.",
    "title": "Claude subagent metadata is incomplete",
  },
  {
    "evidence": [
      "Claude Code hooks",
    ],
    "fix": {
      "description": "Add a prompt value or remove the hook entry.",
      "label": "Suggested fix",
    },
    "id": "claude-code:structure:user-hook-pretooluse-agent-missing-prompt",
    "message": "PreToolUse contains a agent hook without a prompt.",
    "suggestion": "Add a prompt value or remove the hook entry.",
    "title": "Claude prompt hook is missing prompt",
  },
  {
    "evidence": [
      "Claude Code hooks",
    ],
    "fix": {
      "description": "Add a url value or remove the hook entry.",
      "label": "Suggested fix",
    },
    "id": "claude-code:structure:user-hook-pretooluse-http-missing-url",
    "message": "PreToolUse contains an http hook without a url.",
    "suggestion": "Add a url value or remove the hook entry.",
    "title": "Claude HTTP hook is missing url",
  },
  {
    "evidence": [
      "Claude Code hooks",
    ],
    "fix": {
      "description": "Add both server and tool values, or remove the hook entry.",
      "label": "Suggested fix",
    },
    "id": "claude-code:structure:user-hook-pretooluse-mcp-tool-missing-tool",
    "message": "PreToolUse contains an mcp_tool hook without tool.",
    "suggestion": "Add both server and tool values, or remove the hook entry.",
    "title": "Claude MCP tool hook is incomplete",
  },
  {
    "evidence": [
      "Claude Code hooks",
    ],
    "fix": {
      "description": "Add a command value or remove the hook entry.",
      "label": "Suggested fix",
    },
    "id": "claude-code:structure:user-hook-pretooluse-missing-command",
    "message": "PreToolUse contains a command hook without a command.",
    "suggestion": "Add a command value or remove the hook entry.",
    "title": "Claude Code hook is missing command",
  },
  {
    "evidence": [
      "Claude Code hooks",
    ],
    "fix": {
      "description": "Add a prompt value or remove the hook entry.",
      "label": "Suggested fix",
    },
    "id": "claude-code:structure:user-hook-pretooluse-prompt-missing-prompt",
    "message": "PreToolUse contains a prompt hook without a prompt.",
    "suggestion": "Add a prompt value or remove the hook entry.",
    "title": "Claude prompt hook is missing prompt",
  },
  {
    "evidence": [
      "Claude Code hooks",
    ],
    "fix": {
      "description": "Use a documented hook type, such as command, http, mcp_tool, prompt, or agent.",
      "label": "Suggested fix",
    },
    "id": "claude-code:structure:user-hook-pretooluse-unknown-type-frobnicate",
    "message": "PreToolUse uses hook type "frobnicate".",
    "suggestion": "Use a documented hook type, such as command, http, mcp_tool, prompt, or agent.",
    "title": "Claude hook type is not documented",
  },
  {
    "evidence": [
      "Claude Code MCP",
    ],
    "fix": {
      "description": "Add the transport field required by the agent configuration.",
      "label": "Suggested fix",
    },
    "id": "claude-code:structure:user-mcp-notransport-missing-transport",
    "message": "noTransport has no command, url, type, or transport field.",
    "suggestion": "Add the transport field required by the agent configuration.",
    "title": "MCP server has no transport",
  },
  {
    "evidence": [
      "Claude Code skills",
    ],
    "fix": {
      "description": "Add SKILL.md or move non-skill files outside the skills directory.",
      "label": "Suggested fix",
    },
    "id": "claude-code:structure:user-skill-broken-skill-missing-entrypoint",
    "message": "broken-skill has no SKILL.md entrypoint.",
    "suggestion": "Add SKILL.md or move non-skill files outside the skills directory.",
    "title": "Skill is missing SKILL.md",
  },
  {
    "evidence": [
      "Claude Code hooks",
    ],
    "fix": {
      "description": "Fix the JSON syntax in .claude/settings.json.",
      "label": "Suggested fix",
    },
    "id": "claude-code:syntax:project-settings-invalid",
    "message": "Expected property name or '}' in JSON at position 2 (line 1 column 3)",
    "suggestion": "Fix the JSON syntax in .claude/settings.json.",
    "title": "Invalid project settings.json",
  },
  {
    "evidence": [
      "Codex config reference",
    ],
    "fix": {
      "description": "Add the official Codex TOML schema comment near the top of config.toml.",
      "label": "Add Codex config schema",
    },
    "id": "codex:configuration:user-config-schema-comment-missing",
    "message": "config.toml does not include the official Codex TOML schema comment.",
    "suggestion": "Add the Codex schema comment if you want editor validation for config.toml.",
    "title": "Codex config schema comment is not declared",
  },
  {
    "evidence": [
      "Codex hooks",
    ],
    "fix": {
      "description": "Remove async when this hook should run today.",
      "label": "Suggested fix",
    },
    "id": "codex:configuration:user-hook-stop-async-skipped",
    "message": "Codex parses async hook handlers, but async command hooks are not supported yet.",
    "suggestion": "Remove async when this hook should run today.",
    "title": "Codex async hook is skipped",
  },
  {
    "evidence": [
      "Codex hooks",
    ],
    "fix": {
      "description": "Use type = "command" when this hook should run today.",
      "label": "Suggested fix",
    },
    "id": "codex:configuration:user-hook-stop-skipped-type-prompt",
    "message": "Codex currently parses prompt hooks but only command hooks run.",
    "suggestion": "Use type = "command" when this hook should run today.",
    "title": "Codex hook type is parsed but skipped",
  },
  {
    "evidence": [
      "Codex hooks",
    ],
    "fix": {
      "description": "Keep both only if you expect Codex to merge and warn about this layer.",
      "label": "Suggested fix",
    },
    "id": "codex:configuration:user-hooks-duplicated",
    "message": "Codex has hooks in config.toml and hooks.json at the same scope.",
    "suggestion": "Keep both only if you expect Codex to merge and warn about this layer.",
    "title": "Codex hooks defined twice",
  },
  {
    "evidence": [
      "Codex AGENTS.md",
    ],
    "fix": {
      "description": "Create the imported file or remove the @path reference.",
      "label": "Suggested fix",
    },
    "id": "codex:reference:user-agents-md-missing-import-f9xk15",
    "message": "missing-codex.md referenced by AGENTS.md does not exist.",
    "suggestion": "Create the imported file or remove the @path reference.",
    "title": "Instruction import is missing",
  },
  {
    "evidence": [
      "Codex Windows and WSL homes",
    ],
    "fix": {
      "description": "Run Codex once, then refresh Berth.",
      "label": "Suggested fix",
    },
    "id": "codex:session:user-sessions-empty",
    "message": "Codex sessions directory exists but contains no rollout transcripts.",
    "suggestion": "Run Codex once, then refresh Berth.",
    "title": "No Codex session transcripts found",
  },
  {
    "evidence": [
      "Codex custom agents",
    ],
    "fix": {
      "description": "Codex custom agents require name, description, and developer_instructions.",
      "label": "Suggested fix",
    },
    "id": "codex:structure:user-agent-broken",
    "message": "broken is missing name, description, or developer_instructions.",
    "suggestion": "Codex custom agents require name, description, and developer_instructions.",
    "title": "Codex custom agent metadata is incomplete",
  },
  {
    "evidence": [
      "Codex hooks",
    ],
    "fix": {
      "description": "Add a command value or remove the hook entry.",
      "label": "Suggested fix",
    },
    "id": "codex:structure:user-hook-notification-missing-command",
    "message": "Notification contains a command hook without a command.",
    "suggestion": "Add a command value or remove the hook entry.",
    "title": "Codex hook is missing command",
  },
  {
    "evidence": [
      "Codex skills",
    ],
    "fix": {
      "description": "Add SKILL.md or move non-skill files outside the skills directory.",
      "label": "Suggested fix",
    },
    "id": "codex:structure:user-skill-codex-broken-skill-missing-entrypoint",
    "message": "codex-broken-skill has no SKILL.md entrypoint.",
    "suggestion": "Add SKILL.md or move non-skill files outside the skills directory.",
    "title": "Skill is missing SKILL.md",
  },
  {
    "evidence": [
      "Codex config reference",
    ],
    "fix": {
      "description": "Fix the TOML syntax in Codex config.toml.",
      "label": "Suggested fix",
    },
    "id": "codex:syntax:project-config-invalid",
    "message": "Invalid TOML document: incomplete key-value: cannot find end of key

1:  [mcp_servers.bad
     ^
2:  command = "bad"
",
    "suggestion": "Fix the TOML syntax in Codex config.toml.",
    "title": "Invalid Codex config.toml",
  },
  {
    "evidence": [
      "Codex custom agents",
    ],
    "fix": {
      "description": "Fix the file syntax, then refresh Berth.",
      "label": "Suggested fix",
    },
    "id": "codex:syntax:scan-error-13ed7d6",
    "message": "Unexpected token at line 3.",
    "suggestion": "Fix the file syntax, then refresh Berth.",
    "title": "Scanner parser error",
  },
]
`;

exports[`renderer health i18n localize (GH #6 Phase-2) > localizes the full prose by key for en + zh (golden) > darwin-zh 1`] = `
[
  {
    "evidence": [
      "Claude Code 设置文档",
    ],
    "fix": {
      "description": "仅在受信任的本地工作流中使用。",
      "label": "建议修复",
    },
    "id": "claude-code:configuration:project-permission-bypass",
    "message": "permissionMode 被设置为 bypassPermissions。",
    "suggestion": "仅在受信任的本地工作流中使用。",
    "title": "Claude Code 已启用绕过权限",
  },
  {
    "evidence": [
      "Claude Code Hooks 文档",
    ],
    "fix": {
      "description": "当 shell 选择重要时, 移除 shell 或把完整命令放进 command。",
      "label": "建议修复",
    },
    "id": "claude-code:configuration:user-hook-shell-ignored-with-args",
    "message": "一个命令 Hook 同时定义了 args 和 shell; Claude Code 在这种形态下会忽略 shell。",
    "suggestion": "当 shell 选择重要时, 移除 shell 或把完整命令放进 command。",
    "title": "设置 args 时 Claude Hook 的 shell 被忽略",
  },
  {
    "evidence": [
      "Claude Code 设置文档",
    ],
    "fix": {
      "description": "优先使用更窄的命令允许规则。",
      "label": "建议修复",
    },
    "id": "claude-code:configuration:user-permission-broad-bash",
    "message": "permissions.allow 包含 Bash(*)。",
    "suggestion": "优先使用更窄的命令允许规则。",
    "title": "过宽的 Bash 权限规则",
  },
  {
    "evidence": [
      "Claude Code 设置文档",
    ],
    "fix": {
      "description": "在 JSON 文件顶部附近添加官方 Claude Code settings schema。",
      "label": "添加 Claude Code settings schema",
    },
    "id": "claude-code:configuration:user-settings-schema-missing",
    "message": "settings.json 没有声明 Claude Code settings JSON schema。",
    "suggestion": "如果需要 Claude Code settings 的编辑器校验, 添加 $schema。",
    "title": "Claude Code settings schema 未声明",
  },
  {
    "evidence": [
      "Claude Code Memory 文档",
    ],
    "fix": {
      "description": "为共享项目指令添加一条 Claude memory 导入。",
      "label": "导入 AGENTS.md",
    },
    "id": "claude-code:reference:project-agents-md-not-imported",
    "message": "这个项目有 AGENTS.md, 但 Claude Code 读取 CLAUDE.md, 只导入其中引用的文件。",
    "suggestion": "如果这些共享指令也应适用于 Claude Code, 在项目 CLAUDE.md 中添加 @AGENTS.md。",
    "title": "项目 CLAUDE.md 未导入 AGENTS.md",
  },
  {
    "evidence": [
      "Claude Code Memory 文档",
    ],
    "fix": {
      "description": "创建被导入的文件, 或移除该 @path 引用。",
      "label": "建议修复",
    },
    "id": "claude-code:reference:user-agents-md-missing-import-1jcd9gj",
    "message": "AGENTS.md 引用的 missing-agents.md 不存在。",
    "suggestion": "创建被导入的文件, 或移除该 @path 引用。",
    "title": "指令导入缺失",
  },
  {
    "evidence": [
      "Claude Code 会话文档",
    ],
    "fix": {
      "description": "这通常无害。如果不再需要, 可移除过期目录。",
      "label": "建议修复",
    },
    "id": "claude-code:session:empty-project-dirs",
    "message": "在 ~/.claude/projects/ 中发现 1 个空项目目录。",
    "suggestion": "这通常无害。如果不再需要, 可移除过期目录。",
    "title": "存在空的 Claude 项目目录",
  },
  {
    "evidence": [
      "Claude Code 会话文档",
    ],
    "fix": {
      "description": "这可能出现在部分写入或旧版记录中。",
      "label": "建议修复",
    },
    "id": "claude-code:session:metadata-missing-1agy2pa",
    "message": "orphan-session.jsonl 缺少开始时间或项目路径元数据。",
    "suggestion": "这可能出现在部分写入或旧版记录中。",
    "title": "会话元数据不完整",
  },
  {
    "evidence": [
      "Claude Code 设置文档",
    ],
    "fix": {
      "description": "如果需要共享 Claude Code 指令, 创建 ~/.claude/CLAUDE.md。",
      "label": "建议修复",
    },
    "id": "claude-code:source:user-claude-md-missing",
    "message": "没有找到用户级 CLAUDE.md。",
    "suggestion": "如果需要共享 Claude Code 指令, 创建 ~/.claude/CLAUDE.md。",
    "title": "未找到用户级 CLAUDE.md",
  },
  {
    "evidence": [
      "Claude Code MCP 文档",
    ],
    "fix": {
      "description": "添加 Agent 配置所需的 transport 字段。",
      "label": "建议修复",
    },
    "id": "claude-code:structure:project-mcp-empty-missing-transport",
    "message": "empty 没有 command、url、type 或 transport 字段。",
    "suggestion": "添加 Agent 配置所需的 transport 字段。",
    "title": "MCP 服务没有传输方式",
  },
  {
    "evidence": [
      "Claude Code 子代理文档",
    ],
    "fix": {
      "description": "Claude Code 子代理需要带 name 和 description frontmatter 的 Markdown 文件。",
      "label": "建议修复",
    },
    "id": "claude-code:structure:user-agent-broken",
    "message": "broken 缺少 name 或 description frontmatter。",
    "suggestion": "Claude Code 子代理需要带 name 和 description frontmatter 的 Markdown 文件。",
    "title": "Claude 子代理元数据不完整",
  },
  {
    "evidence": [
      "Claude Code Hooks 文档",
    ],
    "fix": {
      "description": "添加 prompt 值, 或移除这个 Hook 条目。",
      "label": "建议修复",
    },
    "id": "claude-code:structure:user-hook-pretooluse-agent-missing-prompt",
    "message": "PreToolUse 中有一个 agent Hook 没有 prompt。",
    "suggestion": "添加 prompt 值, 或移除这个 Hook 条目。",
    "title": "Claude prompt Hook 缺少 prompt",
  },
  {
    "evidence": [
      "Claude Code Hooks 文档",
    ],
    "fix": {
      "description": "添加 url 值, 或移除这个 Hook 条目。",
      "label": "建议修复",
    },
    "id": "claude-code:structure:user-hook-pretooluse-http-missing-url",
    "message": "PreToolUse 中有一个 http Hook 没有 url。",
    "suggestion": "添加 url 值, 或移除这个 Hook 条目。",
    "title": "Claude HTTP Hook 缺少 url",
  },
  {
    "evidence": [
      "Claude Code Hooks 文档",
    ],
    "fix": {
      "description": "同时添加 server 和 tool 值, 或移除这个 Hook 条目。",
      "label": "建议修复",
    },
    "id": "claude-code:structure:user-hook-pretooluse-mcp-tool-missing-tool",
    "message": "PreToolUse 中有一个 mcp_tool Hook 缺少 tool。",
    "suggestion": "同时添加 server 和 tool 值, 或移除这个 Hook 条目。",
    "title": "Claude MCP 工具 Hook 不完整",
  },
  {
    "evidence": [
      "Claude Code Hooks 文档",
    ],
    "fix": {
      "description": "添加 command 值, 或移除这个 Hook 条目。",
      "label": "建议修复",
    },
    "id": "claude-code:structure:user-hook-pretooluse-missing-command",
    "message": "PreToolUse 中有一个 command Hook 没有 command。",
    "suggestion": "添加 command 值, 或移除这个 Hook 条目。",
    "title": "Claude Code Hook 缺少命令",
  },
  {
    "evidence": [
      "Claude Code Hooks 文档",
    ],
    "fix": {
      "description": "添加 prompt 值, 或移除这个 Hook 条目。",
      "label": "建议修复",
    },
    "id": "claude-code:structure:user-hook-pretooluse-prompt-missing-prompt",
    "message": "PreToolUse 中有一个 prompt Hook 没有 prompt。",
    "suggestion": "添加 prompt 值, 或移除这个 Hook 条目。",
    "title": "Claude prompt Hook 缺少 prompt",
  },
  {
    "evidence": [
      "Claude Code Hooks 文档",
    ],
    "fix": {
      "description": "使用文档中记录的 Hook 类型, 例如 command、http、mcp_tool、prompt 或 agent。",
      "label": "建议修复",
    },
    "id": "claude-code:structure:user-hook-pretooluse-unknown-type-frobnicate",
    "message": "PreToolUse 使用了 Hook 类型 "frobnicate"。",
    "suggestion": "使用文档中记录的 Hook 类型, 例如 command、http、mcp_tool、prompt 或 agent。",
    "title": "Claude Hook 类型未在文档中记录",
  },
  {
    "evidence": [
      "Claude Code MCP 文档",
    ],
    "fix": {
      "description": "添加 Agent 配置所需的 transport 字段。",
      "label": "建议修复",
    },
    "id": "claude-code:structure:user-mcp-notransport-missing-transport",
    "message": "noTransport 没有 command、url、type 或 transport 字段。",
    "suggestion": "添加 Agent 配置所需的 transport 字段。",
    "title": "MCP 服务没有传输方式",
  },
  {
    "evidence": [
      "Claude Code Skills 文档",
    ],
    "fix": {
      "description": "添加 SKILL.md, 或将非 Skill 文件移出 skills 目录。",
      "label": "建议修复",
    },
    "id": "claude-code:structure:user-skill-broken-skill-missing-entrypoint",
    "message": "broken-skill 没有 SKILL.md 入口文件。",
    "suggestion": "添加 SKILL.md, 或将非 Skill 文件移出 skills 目录。",
    "title": "Skill 缺少 SKILL.md",
  },
  {
    "evidence": [
      "Claude Code Hooks 文档",
    ],
    "fix": {
      "description": "修复 .claude/settings.json 的 JSON 语法。",
      "label": "建议修复",
    },
    "id": "claude-code:syntax:project-settings-invalid",
    "message": "Expected property name or '}' in JSON at position 2 (line 1 column 3)",
    "suggestion": "修复 .claude/settings.json 的 JSON 语法。",
    "title": "项目 settings.json 无效",
  },
  {
    "evidence": [
      "Codex 配置参考",
    ],
    "fix": {
      "description": "在 config.toml 顶部附近添加官方 Codex TOML schema 注释。",
      "label": "添加 Codex 配置 schema",
    },
    "id": "codex:configuration:user-config-schema-comment-missing",
    "message": "config.toml 没有包含官方 Codex TOML schema 注释。",
    "suggestion": "如果需要 config.toml 的编辑器校验, 添加 Codex schema 注释。",
    "title": "Codex 配置 schema 未声明",
  },
  {
    "evidence": [
      "Codex Hooks 文档",
    ],
    "fix": {
      "description": "如果这个 Hook 现在就应运行, 移除 async。",
      "label": "建议修复",
    },
    "id": "codex:configuration:user-hook-stop-async-skipped",
    "message": "Codex 会解析异步 Hook 处理器, 但目前还不支持异步 command Hook。",
    "suggestion": "如果这个 Hook 现在就应运行, 移除 async。",
    "title": "Codex 异步 Hook 被跳过",
  },
  {
    "evidence": [
      "Codex Hooks 文档",
    ],
    "fix": {
      "description": "如果这个 Hook 现在就应运行, 使用 type = "command"。",
      "label": "建议修复",
    },
    "id": "codex:configuration:user-hook-stop-skipped-type-prompt",
    "message": "Codex 目前会解析 prompt Hook, 但只有 command Hook 会运行。",
    "suggestion": "如果这个 Hook 现在就应运行, 使用 type = "command"。",
    "title": "Codex Hook 类型被解析但跳过",
  },
  {
    "evidence": [
      "Codex Hooks 文档",
    ],
    "fix": {
      "description": "只有当你期望 Codex 合并并对该层级发出警告时才保留两者。",
      "label": "建议修复",
    },
    "id": "codex:configuration:user-hooks-duplicated",
    "message": "Codex 在同一层级的 config.toml 和 hooks.json 中都定义了 Hook。",
    "suggestion": "只有当你期望 Codex 合并并对该层级发出警告时才保留两者。",
    "title": "Codex Hook 定义了两次",
  },
  {
    "evidence": [
      "Codex AGENTS.md 文档",
    ],
    "fix": {
      "description": "创建被导入的文件, 或移除该 @path 引用。",
      "label": "建议修复",
    },
    "id": "codex:reference:user-agents-md-missing-import-f9xk15",
    "message": "AGENTS.md 引用的 missing-codex.md 不存在。",
    "suggestion": "创建被导入的文件, 或移除该 @path 引用。",
    "title": "指令导入缺失",
  },
  {
    "evidence": [
      "Codex Windows 与 WSL 主目录文档",
    ],
    "fix": {
      "description": "运行一次 Codex, 然后刷新 Berth。",
      "label": "建议修复",
    },
    "id": "codex:session:user-sessions-empty",
    "message": "Codex sessions 目录存在, 但不包含任何 rollout 记录。",
    "suggestion": "运行一次 Codex, 然后刷新 Berth。",
    "title": "未找到 Codex 会话记录",
  },
  {
    "evidence": [
      "Codex 自定义代理文档",
    ],
    "fix": {
      "description": "Codex 自定义代理需要 name、description 和 developer_instructions。",
      "label": "建议修复",
    },
    "id": "codex:structure:user-agent-broken",
    "message": "broken 缺少 name、description 或 developer_instructions。",
    "suggestion": "Codex 自定义代理需要 name、description 和 developer_instructions。",
    "title": "Codex 自定义代理元数据不完整",
  },
  {
    "evidence": [
      "Codex Hooks 文档",
    ],
    "fix": {
      "description": "添加 command 值, 或移除这个 Hook 条目。",
      "label": "建议修复",
    },
    "id": "codex:structure:user-hook-notification-missing-command",
    "message": "Notification 中有一个 command Hook 没有 command。",
    "suggestion": "添加 command 值, 或移除这个 Hook 条目。",
    "title": "Codex Hook 缺少命令",
  },
  {
    "evidence": [
      "Codex Skills 文档",
    ],
    "fix": {
      "description": "添加 SKILL.md, 或将非 Skill 文件移出 skills 目录。",
      "label": "建议修复",
    },
    "id": "codex:structure:user-skill-codex-broken-skill-missing-entrypoint",
    "message": "codex-broken-skill 没有 SKILL.md 入口文件。",
    "suggestion": "添加 SKILL.md, 或将非 Skill 文件移出 skills 目录。",
    "title": "Skill 缺少 SKILL.md",
  },
  {
    "evidence": [
      "Codex 配置参考",
    ],
    "fix": {
      "description": "修复 Codex config.toml 的 TOML 语法。",
      "label": "建议修复",
    },
    "id": "codex:syntax:project-config-invalid",
    "message": "Invalid TOML document: incomplete key-value: cannot find end of key

1:  [mcp_servers.bad
     ^
2:  command = "bad"
",
    "suggestion": "修复 Codex config.toml 的 TOML 语法。",
    "title": "Codex config.toml 无效",
  },
  {
    "evidence": [
      "Codex 自定义代理文档",
    ],
    "fix": {
      "description": "修复文件语法, 然后刷新 Berth。",
      "label": "建议修复",
    },
    "id": "codex:syntax:scan-error-13ed7d6",
    "message": "Unexpected token at line 3.",
    "suggestion": "修复文件语法, 然后刷新 Berth。",
    "title": "扫描器解析错误",
  },
]
`;

exports[`renderer health i18n localize (GH #6 Phase-2) > localizes the full prose by key for en + zh (golden) > win32-en 1`] = `
[
  {
    "evidence": [
      "Claude Code settings",
    ],
    "fix": {
      "description": "Use this only for trusted local workflows.",
      "label": "Suggested fix",
    },
    "id": "claude-code:configuration:project-permission-bypass",
    "message": "permissionMode is set to bypassPermissions.",
    "suggestion": "Use this only for trusted local workflows.",
    "title": "Claude Code bypass permissions enabled",
  },
  {
    "evidence": [
      "Claude Code hooks",
    ],
    "fix": {
      "description": "Remove shell or move the full command into command when shell selection matters.",
      "label": "Suggested fix",
    },
    "id": "claude-code:configuration:user-hook-shell-ignored-with-args",
    "message": "A command hook defines args and shell; Claude Code ignores shell in this shape.",
    "suggestion": "Remove shell or move the full command into command when shell selection matters.",
    "title": "Claude hook shell is ignored when args are set",
  },
  {
    "evidence": [
      "Claude Code hooks",
    ],
    "fix": {
      "description": "Set "shell": "powershell" when the hook command is written for PowerShell.",
      "label": "Suggested fix",
    },
    "id": "claude-code:configuration:user-hook-windows-shell",
    "message": "A command hook is configured without shell: powershell on Windows.",
    "suggestion": "Set "shell": "powershell" when the hook command is written for PowerShell.",
    "title": "Claude hook has no Windows shell hint",
  },
  {
    "evidence": [
      "Claude Code settings",
    ],
    "fix": {
      "description": "Prefer narrower command allow rules.",
      "label": "Suggested fix",
    },
    "id": "claude-code:configuration:user-permission-broad-bash",
    "message": "permissions.allow contains Bash(*).",
    "suggestion": "Prefer narrower command allow rules.",
    "title": "Broad Bash permission rule",
  },
  {
    "evidence": [
      "Claude Code settings",
    ],
    "fix": {
      "description": "Add the official Claude Code settings schema near the top of the JSON file.",
      "label": "Add Claude settings schema",
    },
    "id": "claude-code:configuration:user-settings-schema-missing",
    "message": "settings.json does not declare the Claude Code settings JSON schema.",
    "suggestion": "Add $schema if you want editor validation for Claude Code settings.",
    "title": "Claude settings schema is not declared",
  },
  {
    "evidence": [
      "Claude Code memory",
    ],
    "fix": {
      "description": "Add a Claude memory import for the shared project instructions.",
      "label": "Import AGENTS.md",
    },
    "id": "claude-code:reference:project-agents-md-not-imported",
    "message": "This project has AGENTS.md, but Claude Code reads CLAUDE.md and only imports files referenced from it.",
    "suggestion": "Add @AGENTS.md to project CLAUDE.md if those shared instructions should apply to Claude Code.",
    "title": "Project CLAUDE.md does not import AGENTS.md",
  },
  {
    "evidence": [
      "Claude Code memory",
    ],
    "fix": {
      "description": "Create the imported file or remove the @path reference.",
      "label": "Suggested fix",
    },
    "id": "claude-code:reference:user-agents-md-missing-import-1jcd9gj",
    "message": "missing-agents.md referenced by AGENTS.md does not exist.",
    "suggestion": "Create the imported file or remove the @path reference.",
    "title": "Instruction import is missing",
  },
  {
    "evidence": [
      "Claude Code sessions",
    ],
    "fix": {
      "description": "This is usually harmless. Remove stale directories if they are no longer useful.",
      "label": "Suggested fix",
    },
    "id": "claude-code:session:empty-project-dirs",
    "message": "1 empty project directories found in ~/.claude/projects/.",
    "suggestion": "This is usually harmless. Remove stale directories if they are no longer useful.",
    "title": "Empty Claude project directories",
  },
  {
    "evidence": [
      "Claude Code sessions",
    ],
    "fix": {
      "description": "This can happen with partial or legacy transcripts.",
      "label": "Suggested fix",
    },
    "id": "claude-code:session:metadata-missing-1agy2pa",
    "message": "orphan-session.jsonl is missing start time or project path metadata.",
    "suggestion": "This can happen with partial or legacy transcripts.",
    "title": "Session metadata is incomplete",
  },
  {
    "evidence": [
      "Claude Code settings",
    ],
    "fix": {
      "description": "Create ~/.claude/CLAUDE.md if you want shared Claude Code instructions.",
      "label": "Suggested fix",
    },
    "id": "claude-code:source:user-claude-md-missing",
    "message": "No user-level CLAUDE.md found.",
    "suggestion": "Create ~/.claude/CLAUDE.md if you want shared Claude Code instructions.",
    "title": "User CLAUDE.md not found",
  },
  {
    "evidence": [
      "Claude Code MCP",
    ],
    "fix": {
      "description": "Add the transport field required by the agent configuration.",
      "label": "Suggested fix",
    },
    "id": "claude-code:structure:project-mcp-empty-missing-transport",
    "message": "empty has no command, url, type, or transport field.",
    "suggestion": "Add the transport field required by the agent configuration.",
    "title": "MCP server has no transport",
  },
  {
    "evidence": [
      "Claude Code subagents",
    ],
    "fix": {
      "description": "Claude Code subagents require Markdown files with name and description frontmatter.",
      "label": "Suggested fix",
    },
    "id": "claude-code:structure:user-agent-broken",
    "message": "broken is missing name or description frontmatter.",
    "suggestion": "Claude Code subagents require Markdown files with name and description frontmatter.",
    "title": "Claude subagent metadata is incomplete",
  },
  {
    "evidence": [
      "Claude Code hooks",
    ],
    "fix": {
      "description": "Add a prompt value or remove the hook entry.",
      "label": "Suggested fix",
    },
    "id": "claude-code:structure:user-hook-pretooluse-agent-missing-prompt",
    "message": "PreToolUse contains a agent hook without a prompt.",
    "suggestion": "Add a prompt value or remove the hook entry.",
    "title": "Claude prompt hook is missing prompt",
  },
  {
    "evidence": [
      "Claude Code hooks",
    ],
    "fix": {
      "description": "Add a url value or remove the hook entry.",
      "label": "Suggested fix",
    },
    "id": "claude-code:structure:user-hook-pretooluse-http-missing-url",
    "message": "PreToolUse contains an http hook without a url.",
    "suggestion": "Add a url value or remove the hook entry.",
    "title": "Claude HTTP hook is missing url",
  },
  {
    "evidence": [
      "Claude Code hooks",
    ],
    "fix": {
      "description": "Add both server and tool values, or remove the hook entry.",
      "label": "Suggested fix",
    },
    "id": "claude-code:structure:user-hook-pretooluse-mcp-tool-missing-tool",
    "message": "PreToolUse contains an mcp_tool hook without tool.",
    "suggestion": "Add both server and tool values, or remove the hook entry.",
    "title": "Claude MCP tool hook is incomplete",
  },
  {
    "evidence": [
      "Claude Code hooks",
    ],
    "fix": {
      "description": "Add a command value or remove the hook entry.",
      "label": "Suggested fix",
    },
    "id": "claude-code:structure:user-hook-pretooluse-missing-command",
    "message": "PreToolUse contains a command hook without a command.",
    "suggestion": "Add a command value or remove the hook entry.",
    "title": "Claude Code hook is missing command",
  },
  {
    "evidence": [
      "Claude Code hooks",
    ],
    "fix": {
      "description": "Add a prompt value or remove the hook entry.",
      "label": "Suggested fix",
    },
    "id": "claude-code:structure:user-hook-pretooluse-prompt-missing-prompt",
    "message": "PreToolUse contains a prompt hook without a prompt.",
    "suggestion": "Add a prompt value or remove the hook entry.",
    "title": "Claude prompt hook is missing prompt",
  },
  {
    "evidence": [
      "Claude Code hooks",
    ],
    "fix": {
      "description": "Use a documented hook type, such as command, http, mcp_tool, prompt, or agent.",
      "label": "Suggested fix",
    },
    "id": "claude-code:structure:user-hook-pretooluse-unknown-type-frobnicate",
    "message": "PreToolUse uses hook type "frobnicate".",
    "suggestion": "Use a documented hook type, such as command, http, mcp_tool, prompt, or agent.",
    "title": "Claude hook type is not documented",
  },
  {
    "evidence": [
      "Claude Code MCP",
    ],
    "fix": {
      "description": "Add the transport field required by the agent configuration.",
      "label": "Suggested fix",
    },
    "id": "claude-code:structure:user-mcp-notransport-missing-transport",
    "message": "noTransport has no command, url, type, or transport field.",
    "suggestion": "Add the transport field required by the agent configuration.",
    "title": "MCP server has no transport",
  },
  {
    "evidence": [
      "Claude Code skills",
    ],
    "fix": {
      "description": "Add SKILL.md or move non-skill files outside the skills directory.",
      "label": "Suggested fix",
    },
    "id": "claude-code:structure:user-skill-broken-skill-missing-entrypoint",
    "message": "broken-skill has no SKILL.md entrypoint.",
    "suggestion": "Add SKILL.md or move non-skill files outside the skills directory.",
    "title": "Skill is missing SKILL.md",
  },
  {
    "evidence": [
      "Claude Code hooks",
    ],
    "fix": {
      "description": "Fix the JSON syntax in .claude/settings.json.",
      "label": "Suggested fix",
    },
    "id": "claude-code:syntax:project-settings-invalid",
    "message": "Expected property name or '}' in JSON at position 2 (line 1 column 3)",
    "suggestion": "Fix the JSON syntax in .claude/settings.json.",
    "title": "Invalid project settings.json",
  },
  {
    "evidence": [
      "Codex config reference",
    ],
    "fix": {
      "description": "Add the official Codex TOML schema comment near the top of config.toml.",
      "label": "Add Codex config schema",
    },
    "id": "codex:configuration:user-config-schema-comment-missing",
    "message": "config.toml does not include the official Codex TOML schema comment.",
    "suggestion": "Add the Codex schema comment if you want editor validation for config.toml.",
    "title": "Codex config schema comment is not declared",
  },
  {
    "evidence": [
      "Codex hooks",
    ],
    "fix": {
      "description": "Remove async when this hook should run today.",
      "label": "Suggested fix",
    },
    "id": "codex:configuration:user-hook-stop-async-skipped",
    "message": "Codex parses async hook handlers, but async command hooks are not supported yet.",
    "suggestion": "Remove async when this hook should run today.",
    "title": "Codex async hook is skipped",
  },
  {
    "evidence": [
      "Codex hooks",
    ],
    "fix": {
      "description": "Use type = "command" when this hook should run today.",
      "label": "Suggested fix",
    },
    "id": "codex:configuration:user-hook-stop-skipped-type-prompt",
    "message": "Codex currently parses prompt hooks but only command hooks run.",
    "suggestion": "Use type = "command" when this hook should run today.",
    "title": "Codex hook type is parsed but skipped",
  },
  {
    "evidence": [
      "Codex hooks",
    ],
    "fix": {
      "description": "Add commandWindows or command_windows when the command differs on Windows.",
      "label": "Suggested fix",
    },
    "id": "codex:configuration:user-hook-windows-command",
    "message": "A command hook is configured without commandWindows on Windows.",
    "suggestion": "Add commandWindows or command_windows when the command differs on Windows.",
    "title": "Codex hook has no Windows command override",
  },
  {
    "evidence": [
      "Codex hooks",
    ],
    "fix": {
      "description": "Keep both only if you expect Codex to merge and warn about this layer.",
      "label": "Suggested fix",
    },
    "id": "codex:configuration:user-hooks-duplicated",
    "message": "Codex has hooks in config.toml and hooks.json at the same scope.",
    "suggestion": "Keep both only if you expect Codex to merge and warn about this layer.",
    "title": "Codex hooks defined twice",
  },
  {
    "evidence": [
      "Codex AGENTS.md",
    ],
    "fix": {
      "description": "Create the imported file or remove the @path reference.",
      "label": "Suggested fix",
    },
    "id": "codex:reference:user-agents-md-missing-import-f9xk15",
    "message": "missing-codex.md referenced by AGENTS.md does not exist.",
    "suggestion": "Create the imported file or remove the @path reference.",
    "title": "Instruction import is missing",
  },
  {
    "evidence": [
      "Codex Windows and WSL homes",
    ],
    "fix": {
      "description": "Run Codex once, then refresh Berth.",
      "label": "Suggested fix",
    },
    "id": "codex:session:user-sessions-empty",
    "message": "Codex sessions directory exists but contains no rollout transcripts.",
    "suggestion": "Run Codex once, then refresh Berth.",
    "title": "No Codex session transcripts found",
  },
  {
    "evidence": [
      "Codex custom agents",
    ],
    "fix": {
      "description": "Codex custom agents require name, description, and developer_instructions.",
      "label": "Suggested fix",
    },
    "id": "codex:structure:user-agent-broken",
    "message": "broken is missing name, description, or developer_instructions.",
    "suggestion": "Codex custom agents require name, description, and developer_instructions.",
    "title": "Codex custom agent metadata is incomplete",
  },
  {
    "evidence": [
      "Codex hooks",
    ],
    "fix": {
      "description": "Add a command value or remove the hook entry.",
      "label": "Suggested fix",
    },
    "id": "codex:structure:user-hook-notification-missing-command",
    "message": "Notification contains a command hook without a command.",
    "suggestion": "Add a command value or remove the hook entry.",
    "title": "Codex hook is missing command",
  },
  {
    "evidence": [
      "Codex skills",
    ],
    "fix": {
      "description": "Add SKILL.md or move non-skill files outside the skills directory.",
      "label": "Suggested fix",
    },
    "id": "codex:structure:user-skill-codex-broken-skill-missing-entrypoint",
    "message": "codex-broken-skill has no SKILL.md entrypoint.",
    "suggestion": "Add SKILL.md or move non-skill files outside the skills directory.",
    "title": "Skill is missing SKILL.md",
  },
  {
    "evidence": [
      "Codex config reference",
    ],
    "fix": {
      "description": "Fix the TOML syntax in Codex config.toml.",
      "label": "Suggested fix",
    },
    "id": "codex:syntax:project-config-invalid",
    "message": "Invalid TOML document: incomplete key-value: cannot find end of key

1:  [mcp_servers.bad
     ^
2:  command = "bad"
",
    "suggestion": "Fix the TOML syntax in Codex config.toml.",
    "title": "Invalid Codex config.toml",
  },
  {
    "evidence": [
      "Codex custom agents",
    ],
    "fix": {
      "description": "Fix the file syntax, then refresh Berth.",
      "label": "Suggested fix",
    },
    "id": "codex:syntax:scan-error-13ed7d6",
    "message": "Unexpected token at line 3.",
    "suggestion": "Fix the file syntax, then refresh Berth.",
    "title": "Scanner parser error",
  },
]
`;

exports[`renderer health i18n localize (GH #6 Phase-2) > localizes the full prose by key for en + zh (golden) > win32-zh 1`] = `
[
  {
    "evidence": [
      "Claude Code 设置文档",
    ],
    "fix": {
      "description": "仅在受信任的本地工作流中使用。",
      "label": "建议修复",
    },
    "id": "claude-code:configuration:project-permission-bypass",
    "message": "permissionMode 被设置为 bypassPermissions。",
    "suggestion": "仅在受信任的本地工作流中使用。",
    "title": "Claude Code 已启用绕过权限",
  },
  {
    "evidence": [
      "Claude Code Hooks 文档",
    ],
    "fix": {
      "description": "当 shell 选择重要时, 移除 shell 或把完整命令放进 command。",
      "label": "建议修复",
    },
    "id": "claude-code:configuration:user-hook-shell-ignored-with-args",
    "message": "一个命令 Hook 同时定义了 args 和 shell; Claude Code 在这种形态下会忽略 shell。",
    "suggestion": "当 shell 选择重要时, 移除 shell 或把完整命令放进 command。",
    "title": "设置 args 时 Claude Hook 的 shell 被忽略",
  },
  {
    "evidence": [
      "Claude Code Hooks 文档",
    ],
    "fix": {
      "description": "当 Hook 命令是为 PowerShell 编写时, 设置 "shell": "powershell"。",
      "label": "建议修复",
    },
    "id": "claude-code:configuration:user-hook-windows-shell",
    "message": "一个命令 Hook 在 Windows 上没有配置 shell: powershell。",
    "suggestion": "当 Hook 命令是为 PowerShell 编写时, 设置 "shell": "powershell"。",
    "title": "Claude Hook 缺少 Windows shell 提示",
  },
  {
    "evidence": [
      "Claude Code 设置文档",
    ],
    "fix": {
      "description": "优先使用更窄的命令允许规则。",
      "label": "建议修复",
    },
    "id": "claude-code:configuration:user-permission-broad-bash",
    "message": "permissions.allow 包含 Bash(*)。",
    "suggestion": "优先使用更窄的命令允许规则。",
    "title": "过宽的 Bash 权限规则",
  },
  {
    "evidence": [
      "Claude Code 设置文档",
    ],
    "fix": {
      "description": "在 JSON 文件顶部附近添加官方 Claude Code settings schema。",
      "label": "添加 Claude Code settings schema",
    },
    "id": "claude-code:configuration:user-settings-schema-missing",
    "message": "settings.json 没有声明 Claude Code settings JSON schema。",
    "suggestion": "如果需要 Claude Code settings 的编辑器校验, 添加 $schema。",
    "title": "Claude Code settings schema 未声明",
  },
  {
    "evidence": [
      "Claude Code Memory 文档",
    ],
    "fix": {
      "description": "为共享项目指令添加一条 Claude memory 导入。",
      "label": "导入 AGENTS.md",
    },
    "id": "claude-code:reference:project-agents-md-not-imported",
    "message": "这个项目有 AGENTS.md, 但 Claude Code 读取 CLAUDE.md, 只导入其中引用的文件。",
    "suggestion": "如果这些共享指令也应适用于 Claude Code, 在项目 CLAUDE.md 中添加 @AGENTS.md。",
    "title": "项目 CLAUDE.md 未导入 AGENTS.md",
  },
  {
    "evidence": [
      "Claude Code Memory 文档",
    ],
    "fix": {
      "description": "创建被导入的文件, 或移除该 @path 引用。",
      "label": "建议修复",
    },
    "id": "claude-code:reference:user-agents-md-missing-import-1jcd9gj",
    "message": "AGENTS.md 引用的 missing-agents.md 不存在。",
    "suggestion": "创建被导入的文件, 或移除该 @path 引用。",
    "title": "指令导入缺失",
  },
  {
    "evidence": [
      "Claude Code 会话文档",
    ],
    "fix": {
      "description": "这通常无害。如果不再需要, 可移除过期目录。",
      "label": "建议修复",
    },
    "id": "claude-code:session:empty-project-dirs",
    "message": "在 ~/.claude/projects/ 中发现 1 个空项目目录。",
    "suggestion": "这通常无害。如果不再需要, 可移除过期目录。",
    "title": "存在空的 Claude 项目目录",
  },
  {
    "evidence": [
      "Claude Code 会话文档",
    ],
    "fix": {
      "description": "这可能出现在部分写入或旧版记录中。",
      "label": "建议修复",
    },
    "id": "claude-code:session:metadata-missing-1agy2pa",
    "message": "orphan-session.jsonl 缺少开始时间或项目路径元数据。",
    "suggestion": "这可能出现在部分写入或旧版记录中。",
    "title": "会话元数据不完整",
  },
  {
    "evidence": [
      "Claude Code 设置文档",
    ],
    "fix": {
      "description": "如果需要共享 Claude Code 指令, 创建 ~/.claude/CLAUDE.md。",
      "label": "建议修复",
    },
    "id": "claude-code:source:user-claude-md-missing",
    "message": "没有找到用户级 CLAUDE.md。",
    "suggestion": "如果需要共享 Claude Code 指令, 创建 ~/.claude/CLAUDE.md。",
    "title": "未找到用户级 CLAUDE.md",
  },
  {
    "evidence": [
      "Claude Code MCP 文档",
    ],
    "fix": {
      "description": "添加 Agent 配置所需的 transport 字段。",
      "label": "建议修复",
    },
    "id": "claude-code:structure:project-mcp-empty-missing-transport",
    "message": "empty 没有 command、url、type 或 transport 字段。",
    "suggestion": "添加 Agent 配置所需的 transport 字段。",
    "title": "MCP 服务没有传输方式",
  },
  {
    "evidence": [
      "Claude Code 子代理文档",
    ],
    "fix": {
      "description": "Claude Code 子代理需要带 name 和 description frontmatter 的 Markdown 文件。",
      "label": "建议修复",
    },
    "id": "claude-code:structure:user-agent-broken",
    "message": "broken 缺少 name 或 description frontmatter。",
    "suggestion": "Claude Code 子代理需要带 name 和 description frontmatter 的 Markdown 文件。",
    "title": "Claude 子代理元数据不完整",
  },
  {
    "evidence": [
      "Claude Code Hooks 文档",
    ],
    "fix": {
      "description": "添加 prompt 值, 或移除这个 Hook 条目。",
      "label": "建议修复",
    },
    "id": "claude-code:structure:user-hook-pretooluse-agent-missing-prompt",
    "message": "PreToolUse 中有一个 agent Hook 没有 prompt。",
    "suggestion": "添加 prompt 值, 或移除这个 Hook 条目。",
    "title": "Claude prompt Hook 缺少 prompt",
  },
  {
    "evidence": [
      "Claude Code Hooks 文档",
    ],
    "fix": {
      "description": "添加 url 值, 或移除这个 Hook 条目。",
      "label": "建议修复",
    },
    "id": "claude-code:structure:user-hook-pretooluse-http-missing-url",
    "message": "PreToolUse 中有一个 http Hook 没有 url。",
    "suggestion": "添加 url 值, 或移除这个 Hook 条目。",
    "title": "Claude HTTP Hook 缺少 url",
  },
  {
    "evidence": [
      "Claude Code Hooks 文档",
    ],
    "fix": {
      "description": "同时添加 server 和 tool 值, 或移除这个 Hook 条目。",
      "label": "建议修复",
    },
    "id": "claude-code:structure:user-hook-pretooluse-mcp-tool-missing-tool",
    "message": "PreToolUse 中有一个 mcp_tool Hook 缺少 tool。",
    "suggestion": "同时添加 server 和 tool 值, 或移除这个 Hook 条目。",
    "title": "Claude MCP 工具 Hook 不完整",
  },
  {
    "evidence": [
      "Claude Code Hooks 文档",
    ],
    "fix": {
      "description": "添加 command 值, 或移除这个 Hook 条目。",
      "label": "建议修复",
    },
    "id": "claude-code:structure:user-hook-pretooluse-missing-command",
    "message": "PreToolUse 中有一个 command Hook 没有 command。",
    "suggestion": "添加 command 值, 或移除这个 Hook 条目。",
    "title": "Claude Code Hook 缺少命令",
  },
  {
    "evidence": [
      "Claude Code Hooks 文档",
    ],
    "fix": {
      "description": "添加 prompt 值, 或移除这个 Hook 条目。",
      "label": "建议修复",
    },
    "id": "claude-code:structure:user-hook-pretooluse-prompt-missing-prompt",
    "message": "PreToolUse 中有一个 prompt Hook 没有 prompt。",
    "suggestion": "添加 prompt 值, 或移除这个 Hook 条目。",
    "title": "Claude prompt Hook 缺少 prompt",
  },
  {
    "evidence": [
      "Claude Code Hooks 文档",
    ],
    "fix": {
      "description": "使用文档中记录的 Hook 类型, 例如 command、http、mcp_tool、prompt 或 agent。",
      "label": "建议修复",
    },
    "id": "claude-code:structure:user-hook-pretooluse-unknown-type-frobnicate",
    "message": "PreToolUse 使用了 Hook 类型 "frobnicate"。",
    "suggestion": "使用文档中记录的 Hook 类型, 例如 command、http、mcp_tool、prompt 或 agent。",
    "title": "Claude Hook 类型未在文档中记录",
  },
  {
    "evidence": [
      "Claude Code MCP 文档",
    ],
    "fix": {
      "description": "添加 Agent 配置所需的 transport 字段。",
      "label": "建议修复",
    },
    "id": "claude-code:structure:user-mcp-notransport-missing-transport",
    "message": "noTransport 没有 command、url、type 或 transport 字段。",
    "suggestion": "添加 Agent 配置所需的 transport 字段。",
    "title": "MCP 服务没有传输方式",
  },
  {
    "evidence": [
      "Claude Code Skills 文档",
    ],
    "fix": {
      "description": "添加 SKILL.md, 或将非 Skill 文件移出 skills 目录。",
      "label": "建议修复",
    },
    "id": "claude-code:structure:user-skill-broken-skill-missing-entrypoint",
    "message": "broken-skill 没有 SKILL.md 入口文件。",
    "suggestion": "添加 SKILL.md, 或将非 Skill 文件移出 skills 目录。",
    "title": "Skill 缺少 SKILL.md",
  },
  {
    "evidence": [
      "Claude Code Hooks 文档",
    ],
    "fix": {
      "description": "修复 .claude/settings.json 的 JSON 语法。",
      "label": "建议修复",
    },
    "id": "claude-code:syntax:project-settings-invalid",
    "message": "Expected property name or '}' in JSON at position 2 (line 1 column 3)",
    "suggestion": "修复 .claude/settings.json 的 JSON 语法。",
    "title": "项目 settings.json 无效",
  },
  {
    "evidence": [
      "Codex 配置参考",
    ],
    "fix": {
      "description": "在 config.toml 顶部附近添加官方 Codex TOML schema 注释。",
      "label": "添加 Codex 配置 schema",
    },
    "id": "codex:configuration:user-config-schema-comment-missing",
    "message": "config.toml 没有包含官方 Codex TOML schema 注释。",
    "suggestion": "如果需要 config.toml 的编辑器校验, 添加 Codex schema 注释。",
    "title": "Codex 配置 schema 未声明",
  },
  {
    "evidence": [
      "Codex Hooks 文档",
    ],
    "fix": {
      "description": "如果这个 Hook 现在就应运行, 移除 async。",
      "label": "建议修复",
    },
    "id": "codex:configuration:user-hook-stop-async-skipped",
    "message": "Codex 会解析异步 Hook 处理器, 但目前还不支持异步 command Hook。",
    "suggestion": "如果这个 Hook 现在就应运行, 移除 async。",
    "title": "Codex 异步 Hook 被跳过",
  },
  {
    "evidence": [
      "Codex Hooks 文档",
    ],
    "fix": {
      "description": "如果这个 Hook 现在就应运行, 使用 type = "command"。",
      "label": "建议修复",
    },
    "id": "codex:configuration:user-hook-stop-skipped-type-prompt",
    "message": "Codex 目前会解析 prompt Hook, 但只有 command Hook 会运行。",
    "suggestion": "如果这个 Hook 现在就应运行, 使用 type = "command"。",
    "title": "Codex Hook 类型被解析但跳过",
  },
  {
    "evidence": [
      "Codex Hooks 文档",
    ],
    "fix": {
      "description": "如果 Windows 命令不同, 添加 commandWindows 或 command_windows。",
      "label": "建议修复",
    },
    "id": "codex:configuration:user-hook-windows-command",
    "message": "这个命令 Hook 在 Windows 上没有配置 commandWindows。",
    "suggestion": "如果 Windows 命令不同, 添加 commandWindows 或 command_windows。",
    "title": "Codex Hook 缺少 Windows 命令覆盖",
  },
  {
    "evidence": [
      "Codex Hooks 文档",
    ],
    "fix": {
      "description": "只有当你期望 Codex 合并并对该层级发出警告时才保留两者。",
      "label": "建议修复",
    },
    "id": "codex:configuration:user-hooks-duplicated",
    "message": "Codex 在同一层级的 config.toml 和 hooks.json 中都定义了 Hook。",
    "suggestion": "只有当你期望 Codex 合并并对该层级发出警告时才保留两者。",
    "title": "Codex Hook 定义了两次",
  },
  {
    "evidence": [
      "Codex AGENTS.md 文档",
    ],
    "fix": {
      "description": "创建被导入的文件, 或移除该 @path 引用。",
      "label": "建议修复",
    },
    "id": "codex:reference:user-agents-md-missing-import-f9xk15",
    "message": "AGENTS.md 引用的 missing-codex.md 不存在。",
    "suggestion": "创建被导入的文件, 或移除该 @path 引用。",
    "title": "指令导入缺失",
  },
  {
    "evidence": [
      "Codex Windows 与 WSL 主目录文档",
    ],
    "fix": {
      "description": "运行一次 Codex, 然后刷新 Berth。",
      "label": "建议修复",
    },
    "id": "codex:session:user-sessions-empty",
    "message": "Codex sessions 目录存在, 但不包含任何 rollout 记录。",
    "suggestion": "运行一次 Codex, 然后刷新 Berth。",
    "title": "未找到 Codex 会话记录",
  },
  {
    "evidence": [
      "Codex 自定义代理文档",
    ],
    "fix": {
      "description": "Codex 自定义代理需要 name、description 和 developer_instructions。",
      "label": "建议修复",
    },
    "id": "codex:structure:user-agent-broken",
    "message": "broken 缺少 name、description 或 developer_instructions。",
    "suggestion": "Codex 自定义代理需要 name、description 和 developer_instructions。",
    "title": "Codex 自定义代理元数据不完整",
  },
  {
    "evidence": [
      "Codex Hooks 文档",
    ],
    "fix": {
      "description": "添加 command 值, 或移除这个 Hook 条目。",
      "label": "建议修复",
    },
    "id": "codex:structure:user-hook-notification-missing-command",
    "message": "Notification 中有一个 command Hook 没有 command。",
    "suggestion": "添加 command 值, 或移除这个 Hook 条目。",
    "title": "Codex Hook 缺少命令",
  },
  {
    "evidence": [
      "Codex Skills 文档",
    ],
    "fix": {
      "description": "添加 SKILL.md, 或将非 Skill 文件移出 skills 目录。",
      "label": "建议修复",
    },
    "id": "codex:structure:user-skill-codex-broken-skill-missing-entrypoint",
    "message": "codex-broken-skill 没有 SKILL.md 入口文件。",
    "suggestion": "添加 SKILL.md, 或将非 Skill 文件移出 skills 目录。",
    "title": "Skill 缺少 SKILL.md",
  },
  {
    "evidence": [
      "Codex 配置参考",
    ],
    "fix": {
      "description": "修复 Codex config.toml 的 TOML 语法。",
      "label": "建议修复",
    },
    "id": "codex:syntax:project-config-invalid",
    "message": "Invalid TOML document: incomplete key-value: cannot find end of key

1:  [mcp_servers.bad
     ^
2:  command = "bad"
",
    "suggestion": "修复 Codex config.toml 的 TOML 语法。",
    "title": "Codex config.toml 无效",
  },
  {
    "evidence": [
      "Codex 自定义代理文档",
    ],
    "fix": {
      "description": "修复文件语法, 然后刷新 Berth。",
      "label": "建议修复",
    },
    "id": "codex:syntax:scan-error-13ed7d6",
    "message": "Unexpected token at line 3.",
    "suggestion": "修复文件语法, 然后刷新 Berth。",
    "title": "扫描器解析错误",
  },
]
`;
